# ecotone-common

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md
.planning/phases/01-ci-cd-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-documentation/: 02-01-PLAN.md  02-02-PLAN.md
src/ecotone_common/: __init__.py  consent.py  email.py  passwords.py  tokens.py
src/ecotone_common/literature/: __init__.py  pubmed_client.py  semantic_scholar_client.py  unified_search.py
tests/: test_consent.py  test_email.py  test_passwords.py  test_tokens.py
