[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecotone-common"
version = "0.1.0"
description = "Shared utilities for Ecotone Flask applications"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
]

[project.optional-dependencies]
sendgrid = ["sendgrid>=6.0"]
all = ["sendgrid>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
