[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecotone-common"
version = "0.2.0"
description = "Shared utilities for Ecotone Flask applications"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
    "werkzeug>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
sendgrid = ["sendgrid>=6.0"]
all = ["sendgrid>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
